<resources>
    <string name="app_name">RecipesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes">Recipes</string>
    <string name="favorite">Favorite</string>
    <string name="fats">Fats :</string>
    <string name="_8_g">8g</string>
    <string name="carb">Carb :</string>
    <string name="crispy_fish_goujons">Crispy Fish Goujons</string>
    <string name="recipe_image">recipe_image</string>
    <string name="calories">Calories :</string>
    <string name="_516_cal">516 cal</string>
    <string name="recipes_app">RecipesApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="chef_image">chef image</string>
    <string name="pasta">Pasta</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="paragraph">There’s nothing like the simple things in life - the smell of freshly cut grass, sitting outside on a nice sunny day, spending time with friends and family. Well here is a recipe that delivers simple culinary pleasures - some nice fresh fish with a crispy crust, crunchy potato wedges and some delightfully sweet sugar snap peas flavoured with cooling mint. Slip into something comfortable and relax into a delicious dinner!</string>
    <string name="icon">icon</string>
    <string name="_50_g">50 g</string>
    <string name="proteins">proteins :</string>
    <string name="_2_chicken_breasts">2 Chicken Breasts</string>
    <string name="ingredients">Ingredients :</string>
    <string name="rate">Rate :</string>
    <string name="_2">2</string>
    <string name="fibers">Fibers :</string>
    <string name="headline">Headline</string>
    <string name="country">Country :</string>
    <string name="_gb">GB</string>
    <string name="ratings">Ratings :</string>
</resources>