<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="@dimen/_1sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:elevation="@dimen/_2sdp">

            <View
                android:id="@+id/white_background"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="0dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_recipe"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@mipmap/ic_launcher"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="@id/white_background"
                app:layout_constraintEnd_toEndOf="@+id/white_background"
                app:layout_constraintStart_toStartOf="@id/white_background"
                app:layout_constraintTop_toTopOf="@id/white_background" />


            <TextView
                android:id="@+id/tv_recipe_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_17sdp"
                android:layout_marginEnd="@dimen/_10sdp"

                android:text="@string/crispy_fish_goujons"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/white_background"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_carb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/carb"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toStartOf="@+id/tv_fats"
                app:layout_constraintTop_toBottomOf="@+id/tv_fats" />

            <TextView
                android:id="@+id/tv_fats_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/_8_g"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_fats"
                app:layout_constraintStart_toEndOf="@+id/tv_fats"
                app:layout_constraintTop_toTopOf="@+id/tv_fats" />

            <TextView
                android:id="@+id/tv_calories_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/_516_cal"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_calories"
                app:layout_constraintStart_toEndOf="@+id/tv_calories"
                app:layout_constraintTop_toTopOf="@+id/tv_calories" />

            <TextView
                android:id="@+id/tv_fats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/fats"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toStartOf="@+id/tv_recipe_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_recipe_name" />

            <TextView
                android:id="@+id/tv_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/calories"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toStartOf="@+id/tv_recipe_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_carb" />

            <TextView
                android:id="@+id/tv_carb_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/_8_g"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_carb"
                app:layout_constraintStart_toEndOf="@+id/tv_carb"
                app:layout_constraintTop_toTopOf="@+id/tv_carb" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>